# msp

./: .gitignore  Makefile.am  autogen.sh  configure.ac
crt/: .gitignore  Makefile.am  defs.h  dnssd.c  dnssd.h  event-internal.h  event.c  event.h  evtloop-internal.h  evtloop.c  evtloop.h  list.h  log-internal.h  log-stdio-internal.h  log-stdio.c  log-syslog-internal.h  log-syslog.c  log.c  log.h  timer-internal.h  timer.c  timer.h  tty-internal.h  tty.c  tty.h
mcc/: Makefile.am  event.lua  joystick.lua  js-internal.h  js-lua.c  js.c  js.h  js.lua  lua-bit32.c  lua-event.c  lua-event.h  lua-joystick.c  lua-mcc.c  lua-msp.c  lua-netrx.c  lua-nettx.c  lua-object.c  lua-rcvec.c  lua-rcvec.h  lua-rmi.c  lua-timer.c  lua-timer.h  lua.c  lua.h  main.c  mcc-internal.h  mcc-lua.c  mcc.c  mcc.h  msp-lua.c  msp.c  msp.lua  nettx.lua  nrx-internal.h  nrx-lua.c  nrx.c  nrx.h  nrx.lua  nrx_rpc.x  nrxrpc.x  (+13 more)
mk/: lua.mk  rpc.mk
msp/: Makefile.am  cli.c  cmd.c  cmd.h  defs.h  dispatch-internal.h  dispatch.c  dispatch.h  meta.c  meta.h  msg-internal.h  msg.c  msg.h  msp-internal.h  msp.c  msp.h  str.c  str.h
