
AM_CFLAGS  = -Wmissing-prototypes

AM_CPPFLAGS  = -I$(top_srcdir)

noinst_LTLIBRARIES  = libcrt.la

libcrt_la_SOURCES  = defs.h
libcrt_la_SOURCES += list.h
libcrt_la_SOURCES += evtloop.c
libcrt_la_SOURCES += evtloop.h
libcrt_la_SOURCES += evtloop-internal.h
libcrt_la_SOURCES += tty.c
libcrt_la_SOURCES += tty.h
libcrt_la_SOURCES += tty-internal.h

